# k8s-gcr-auth-helper

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml  rust.yml
src/: common.rs  credentials.rs  lib.rs  main.rs  oauth.rs  run.rs  setup.rs  watch.rs
wix/: main.wxs
