[package]
name = "k8s-gcr-auth-helper"
version = "0.1.1"
authors = ["Stephen Connolly <stephen.alan.connolly@gmail.com>"]
edition = "2018"
description = "A Kubernetes authentication helper to expose per-user credentials as Image Pull Secrets for Google Container Registry"
license = "Apache-2.0"
repository = "https://github.com/stepehnc/k8s-gcr-auth-helper"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.26"
base64 = "0.12.0"
chrono = "0.4.11"
clap = "2.33.0"
env_logger = "0.7.1"
failure = "0.1.7"
futures-timer = "3.0.1"
futures-util = "0.3.4"
futures = "0.3.4"
k8s-openapi = { version = "0.7.1", default-features = false, features = ["v1_15"] }
lazy_static = "1.4.0"
log = "0.4.8"
oauth2 = "2"
regex = "1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "~0.8"
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.3.1", features = ["codec"] }
url = "1.0"
webbrowser = "0.5.2"

#[target.'cfg(windows)'.dependencies.kube]
#version = "0.30.0"
#default-features = false
#features = [ "rustls-tls", "rustls" ]

[target.'cfg(unix)'.dependencies.kube]
version = "0.30.0"
